--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -10,8 +10,32 @@ html {
 }
 
 body {
+  background-color: #fff;
+  margin: 0;
+  width: 100%;
+}
 
-    background-color: #fff;
+#background-header {
+  width: 100%;
+  height: 760px;
+  background-image: url(../images/background.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+#header-logo {
+  position: relative;
+  left: 43%;
+  height: 30px;
+  padding-top: 334px;
+}
+
+#header-text {
+  position: relative;
+  left: 46%;
+  margin: 12px;
+  font-family: Lato, sans-serif;
+  color: #858585;
 }
 
 /**
