Some style fixes to the sidebar.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -117,14 +117,19 @@ body {
 .menu {
   background-color: $primary-color;
   padding-bottom: 12px;
+  font-weight: lighter;
 }
 
-.highlights {
+.sidebar-header {
   margin: 0;
   padding: 16px;
+  padding-bottom: 10px;
+  font-weight: lighter;
 }
 
 .light-line {
+  border-style: solid;
+  opacity: .9;
   width: 90%;
 }
 
@@ -183,6 +188,22 @@ body {
 
 .bond-list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  > li {
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: small;
+    font-weight: lighter;
+  }
+
+  > hr {
+    border-color: #c35440;
+    opacity: .5;
+    width: 90%;
+    border-style: solid;
+  }
 }
 
 .menu {
@@ -198,7 +219,7 @@ body {
   width: 200px;
   padding: 8px;
   color: #fff;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   text-align: center;
   outline: none;
   text-decoration: none;
@@ -208,6 +229,7 @@ body {
 
 .info-text {
   float: left;
+  font-weight: lighter;
   width: 300px;
 }
 
@@ -235,6 +257,7 @@ body {
 
 .title {
   letter-spacing: $title-letter-spacing;
+  font-weight: lighter;
 }
 
 .nav {
@@ -252,6 +275,9 @@ body {
     > a {
       text-decoration: none;
       color: $primary-color;
+      &:hover {
+        color: white;
+      }
     }
   }
 }
@@ -272,6 +298,12 @@ body {
 
   #listings-sidebar {
     height: inherit;
+  }
+
+  .nav {
+    > li {
+      display: block;
+    }
   }
 }
 /**
