--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,15 +5,16 @@
 // bower:scss
 // endbower
 
+@import "vendor/sanitize.scss";
+
 $logo-small: 16px;
 $medium-image-height: 621px;
 $col-width: 530px;
-$col-width-wider: 700px;
 $font-brand: Montserrat;
 $background-color: white;
+$dark-background-color: #4c4c4c;
 $primary-color: #d46049;
 $title-letter-spacing: 1.3px;
-$listings-flex-height: 1500px;
 
 html {
   font-family: $font-brand;
@@ -27,10 +28,12 @@ body {
 }
 
 .background-header {
+  position: relative;
   width: 100%;
-  height: 760px;
-  background-size: 100% 100%;
+  height: 80vh;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-position: center center;
 }
 
 #header-home {
@@ -39,6 +42,16 @@ body {
 
 #header-listings {
   background-image: url(../images/listings-bg.jpg);
+  &:after {
+  	display: block;
+  	content: " ";
+  	position: absolute;
+  	bottom: 0;
+  	left: 0;
+  	height: 100px;
+  	width: 100%;
+  	background-image: linear-gradient(to bottom, rgba($dark-background-color, 0), rgba($dark-background-color, 1));
+  }
 }
 
 #header-logo {
@@ -67,15 +80,8 @@ body {
 }
 
 #header-text-listings {
-  max-height: 90%;
-  max-width: 90%;
-  position: absolute;
-  top: 343px;
-  width: 428px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
+	max-width: 90%;
+  text-align: center;
   font-family: $font-brand;
   color: $background-color;
   font-size: 300%;
@@ -93,18 +99,17 @@ body {
 }
 
 #container-listings {
-  background-color: #4c4c4c;
-  height: 6837px;
+  background-color: $dark-background-color;
 }
 
 #listings-sidebar {
-  width: 450px;
-  height: $listings-flex-height;
+  width: 33%;
+  padding: 0 12px;
 }
 
 #listings-info {
-  width: $col-width-wider;
-  height: $listings-flex-height;
+  width: 66%;
+  padding: 0 12px;
 }
 
 .menu-top {
@@ -134,6 +139,7 @@ body {
 }
 
 #listings-content {
+	position: relative;
   margin-top: -350px;
 }
 
@@ -157,17 +163,15 @@ body {
   flex-direction: row;
   flex-flow: row wrap;
   justify-content: center;
-  align-content: center;
-  align-items: center;
+  max-width: 1800px;
+  margin: 0 auto;
+  // align-content: center;
+  // align-items: center;
 }
 
 .item {
   width: $col-width;
   margin: 16px;
-}
-
-.item-wider {
-  width: $col-width-wider;
 }
 
 .logo-small {
@@ -184,6 +188,7 @@ body {
   top: 37px;
   left: 37px;
   height: 11px;
+  z-index: 2;
 }
 
 .bond-list {
@@ -250,9 +255,8 @@ body {
   display: block;
   padding: 12px;
   color: white;
-  width: 700px;
   overflow: hidden;
-  margin: 12px;
+  margin-bottom: 24px;
 }
 
 .title {
@@ -265,6 +269,7 @@ body {
   margin: 0;
   padding: 0;
   position: absolute;
+  z-index: 2;
   top: 37px;
   right: 37px;
   height: 11px;
@@ -282,6 +287,11 @@ body {
   }
 }
 
+.img-responsive {
+	display: block;
+	max-width: 100%;
+}
+
 
 @media screen and (max-width: 1130px) {
   #content {
@@ -292,18 +302,18 @@ body {
     margin-top: -300px;
   }
 
-  #listings-info {
-    height: inherit;
-  }
-
-  #listings-sidebar {
-    height: inherit;
-  }
-
   .nav {
     > li {
       display: block;
     }
+  }
+
+  #listings-sidebar {
+    width: 90%;
+  }
+
+  #listings-info {
+    width: 90%;
   }
 }
 /**
