--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -113,8 +113,7 @@ body {
 }
 
 .menu-top {
-  background-color: #582921;
-  opacity: .9;
+  background-image: url(../images/listings-cta-bg.jpg);
   padding-top: 4px;
   padding-bottom: 14px;
 }
@@ -164,7 +163,7 @@ body {
   flex-flow: row wrap;
   justify-content: center;
   max-width: 1800px;
-  margin: 0 auto;
+  margin: 42px auto 0 auto;
   // align-content: center;
   // align-items: center;
 }
@@ -221,14 +220,13 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 200px;
   padding: 8px;
+  margin: 20px 12px 12px 12px;
   color: #fff;
   border: 2px solid #fff;
   text-align: center;
   outline: none;
   text-decoration: none;
-  margin-top: 12px;
   font-size: xx-small;
 }
 
