--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,6 +6,7 @@
 // endbower
 
 @import "vendor/sanitize.scss";
+@import "listings.scss";
 
 $logo-small: 16px;
 $medium-image-height: 621px;
@@ -30,7 +31,7 @@ body {
 .background-header {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 155vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -98,10 +99,6 @@ body {
   background-color: $background-color;
 }
 
-#container-listings {
-  background-color: $dark-background-color;
-}
-
 #listings-sidebar {
   width: 33%;
   padding: 0 12px;
@@ -139,7 +136,7 @@ body {
 
 #listings-content {
 	position: relative;
-  margin-top: -350px;
+  margin-top: -657px;
 }
 
 .section-header {
@@ -236,15 +233,6 @@ body {
   width: 50%;
 }
 
-.info-image-gallery {
-	width: 50%;
-  float: right;
-}
-
-.gallery-info {
-  width: 270px;
-}
-
 .info-box {
   background-color: $primary-color;
   display: block;
@@ -287,14 +275,13 @@ body {
 	max-width: 100%;
 }
 
-
 @media screen and (max-width: 1130px) {
   #content {
     top: 1062px;
   }
 
   #listings-content {
-    margin-top: -300px;
+    margin-top: -1145px;
   }
 
   .nav {
