--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -3,6 +3,10 @@
 #container-listings {
   background-color: $dark-background-color;
 
+  strong {
+    font-weight: 700;
+  }
+
 	#listings-content {
 	  position: relative;
     margin-top: -979px;
@@ -73,9 +77,14 @@
 
   .sidebar-header {
     margin: 0;
-    padding: 16px;
+    padding: 14px;
     padding-bottom: 10px;
     font-weight: lighter;
+    opacity: .99;
+  }
+
+  .subdued {
+    opacity: .90;
   }
 
   .menu-top {
@@ -109,11 +118,10 @@
 	  margin: 0;
 	  padding: 0;
 	  > li {
-	    padding-left: 16px;
-	    padding-top: 8px;
-	    padding-bottom: 8px;
+	    padding: 14px;
 	    font-size: small;
 	    font-weight: lighter;
+	    opacity: .8;
 	  }
 
 	  > hr {
@@ -128,6 +136,7 @@
 	  color: $background-color;
 	  font-family: $font-brand;
 	  letter-spacing: $title-letter-spacing;
+	  padding: 20px;
   }
 
   .info-text {
