Fix some text sizing

--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -62,7 +62,7 @@
 	  text-align: center;
 	  font-family: $font-brand;
 	  color: $background-color;
-	  font-size: 300%;
+	  font-size: 4em;
   }
 
   #listings-sidebar {
