--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -121,6 +121,39 @@ strong, b {
 	max-width: 100%;
 }
 
+#footer {
+  background: $primary-color;
+  padding: 2%;
+  padding-bottom: 10%;
+  color: white;
+  font-size: 0.8vw;
+  & > * { line-height: 2.2; }
+  .column {
+    font-size: 1.2em;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 5%;
+    .title {font-weight: bold}
+    a {
+      text-decoration: none;
+      color: inherit;
+      display: block;
+      img {
+	color: white;
+	width: 1em;
+      }
+    }
+    &.social {
+      float: right;
+      margin-right: 0;
+      font-size: 1.5em;
+      text-align: right;
+      line-height: 1;
+      a {padding: 0.5em;}
+    }
+  }
+}
+
 @media screen and (max-width: 1130px) {
   #content {
     top: 1062px;
