--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -2,7 +2,7 @@
   font-size: 0.8vw;
   color: #b0b0b0;
   #header-about {
-    padding-top: 80px;
+    padding-top: 4%;
     background-image: url(../images/about/fs-bg.jpg);
     background-size: cover;
     width: 100%;
