--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -24,6 +24,82 @@ strong, b {
   font-weight: 700
 }
 
+.logo-upper-left {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  height: 11px;
+  width: 18%;
+  height: auto;
+  z-index: 2;
+}
+
+.ham-menu {
+  background-color: white;
+  background-image: url(../images/ham-menu.png);
+  background-size: 40%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 5em;
+  width: 5em;
+  padding: 2em;
+  cursor: pointer;
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.nav-modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  z-index: 10;
+  text-align: center;
+  .inner {
+    margin: 10%;
+    position: relative;
+    .modal-logo {
+      width: 20%;
+      position: absolute;
+      top: 0; left: 0;
+    }
+    .menu-close {
+      background-color: white;
+      background-image: url(../images/menu-close.png);
+      background-size: 20px 20px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      padding: 2em;
+      position: absolute;
+      top: -1em; right: -1em;
+    }
+
+    ul.nav {
+      padding-top: 8%;
+      list-style: none;
+      font-size: 2em;
+      text-align: center;
+      li a {
+	display: block;
+	color: #888;
+	line-height: 2;
+	font-size: 0.8em;
+	text-decoration: none;
+	&.active {color: $primary-color;}
+      }
+    }
+
+  }
+}
+
+
+
 .background-header {
   position: relative;
   width: 100%;
