--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -61,12 +61,12 @@ strong, b {
   z-index: 10;
   text-align: center;
   .inner {
-    margin: 10%;
+    padding: 15px;
     position: relative;
     .modal-logo {
-      width: 20%;
+      width: 18%;
       position: absolute;
-      top: 0; left: 0;
+      top: 15px; left: 15px;
     }
     .menu-close {
       background-color: white;
@@ -75,9 +75,9 @@ strong, b {
       background-position: center center;
       background-repeat: no-repeat;
       cursor: pointer;
-      padding: 2em;
+      padding: 30px;
       position: absolute;
-      top: -1em; right: -1em;
+      top: 0; right: 0;
     }
 
     ul.nav {
@@ -85,6 +85,7 @@ strong, b {
       list-style: none;
       font-size: 2em;
       text-align: center;
+      margin: 0;
       li a {
 	display: block;
 	color: #888;
