--- a/src/app/index-temp.scss
+++ b/src/app/index-temp.scss
@@ -1,5 +1,9 @@
 .index-page-temp {
 
+  .ham-menu, .nav-modal {
+    font-size: 0.8vw;
+  }
+
   img {
     display: inline-block;
     max-width: 100%;
