--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -9,6 +9,10 @@
 
     img.image-left {
       display: inline-block;
+      width: 100%;
+    }
+
+    .header-image {
       width: 50%;
     }
 
@@ -19,26 +23,25 @@
       padding: 0 2em;
 
       .head-title {
-	font-size: 2.3em;
-	span {
-	  font-weight: bold;
-	  color: $primary-color;
-	}
+	      font-size: 2.3em;
+	      span {
+	        font-weight: bold;
+	        color: $primary-color;
+ 	      }
       }
 
       .head-subtitle {
-	font-size: 1.6em;
-	&.top {
-	  color: $primary-color;
-	  font-weight: bold;
-	  margin-top: 2em;
-	}
-	&.bottom { margin-bottom: 2em; }
+				font-size: 1.6em;
+				&.top {
+	  		  color: $primary-color;
+	  		  font-weight: bold;
+	  		  margin-top: 2em;
+				}
+				&.bottom { margin-bottom: 2em; }
       }
 
       p { margin: 0; }
     }
-
     .agents {
       padding-top: 5em;
       text-align: center;
@@ -135,6 +138,17 @@
 	  vertical-align: top;
 	  box-shadow: 4px 4px 1em gainsboro;
 	}
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    #header-about {
+      .header-image {
+        display: none;
+      }
+
+      .description {
+        width: 90%;
       }
     }
   }
