--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -2,6 +2,7 @@
   font-size: 0.8vw;
   color: #b0b0b0;
   max-width: 1800px;
+  margin: auto;
   position: relative;
   #header-about {
     padding-top: 4%;
