--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -24,6 +24,7 @@
 
       .head-title {
 	      font-size: 2.3em;
+	      text-align: center;
 	      span {
 	        font-weight: bold;
 	        color: $primary-color;
