--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -24,6 +24,10 @@ strong, b {
   font-weight: 700
 }
 
+#home-image {
+  vertical-align: middle;
+}
+
 .logo-upper-left {
   position: absolute;
   top: 15px;
@@ -101,17 +105,23 @@ strong, b {
 
 
 
-.background-header {
-  position: relative;
-  width: 100%;
-  height: 155vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
+// .background-header {
+//   position: relative;
+//   width: 100%;
+//   height: 155vh;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: center center;
+// }
 
 #header-home {
   background-image: url(../images/background.png);
+  text-align: center;
+  height: 760px;
+}
+
+#header-content {
+  padding-top: 330px;
 }
 
 #header-logo {
@@ -126,15 +136,6 @@ strong, b {
 }
 
 #header-text {
-  max-height: 90%;
-  max-width: 90%;
-  position: absolute;
-  top: 336px;
-  width: 220px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
   font-family: $font-brand;
   color: #858585;
 }
