--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -7,6 +7,8 @@ $font-brand: Montserrat;
 $background-color: white;
 $dark-background-color: #4c4c4c;
 $primary-color: #d46049;
+$primary-color-lighter: #c8513d;
 $primary-color-darker: #d35540;
+$primary-color-darker-darker: #c04d3a;
 $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
