--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -24,6 +24,12 @@ strong, b {
   font-weight: 700
 }
 
+#contact-us {
+  background-image: url(../images/contact-map.jpg);
+  width: 100%;
+  height: 500px;
+}
+
 .left {
   float: left;
   width: 49%;
