--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -10,5 +10,6 @@ $primary-color: #d46049;
 $primary-color-lighter: #c8513d;
 $primary-color-darker: #d35540;
 $primary-color-darker-darker: #c04d3a;
+$grey: #858585;
 $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
