--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -81,16 +81,6 @@ a {
 
 }
 
-.property-preview-2 {
-  // why wont this work?
-  &:before {
-    content: url(../images/carousel/lefdddddt.png)
-  }
-  &:after {
-    content: url(../images/carousel/right.png)
-  }
-}
-
 .preview-title {
   color: white;
   font-size: 1.5em;
@@ -214,7 +204,6 @@ a {
   width: 28%;
   height: 350px;
   margin: 22px;
-  overflow: hidden;
   font-family: $font-brand;
   font-weight: lighter;
   margin: 25px 42px;
@@ -222,6 +211,8 @@ a {
   &.selected {
     transform: scale(1.3);
     opacity: 1;
+    position: relative;
+    z-index: 4;
   }
 }
 
@@ -411,7 +402,35 @@ a {
   margin-right: 15px;
 }
 
+#listings-arrow-left {
+  left: -158px;
+  top: 66px;
+}
+
+#listings-arrow-right {
+  left: 374px;
+  top: 66px;
+}
+
+.listings-arrow {
+  position: absolute;
+  width: 300px;
+}
+
 @media screen and (max-width: $breakpoint-small) {
+  // hidden elements
+  &.listings-arrow {
+    display: none;
+  }
+
+  .small-hidden {
+    display: none;
+  }
+
+  .services-img {
+    display: none;
+  }
+
   #header-home {
    background-color: white;
    background-image: none;
@@ -428,10 +447,6 @@ a {
 
   .header-overlap {
     margin-top: 0;
-  }
-
-  .small-hidden {
-    display: none;
   }
 
   #content {
@@ -464,13 +479,10 @@ a {
   .property-preview {
     width: 90%;
     opacity: 1;
+    position: relative;
     &.selected {
       transform: scale(1);
     }
-  }
-
-  .services-img {
-    display: none;
   }
 
   .services-info {
