--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,6 +1,6 @@
 $dark-background-color: #4c4c4c;
 $font-brand: Montserrat;
-$logo-small: 16px;
+$logo-small: 22px;
 $medium-image-height: 415px;
 $col-width: 530px;
 $font-brand: Montserrat;
@@ -13,3 +13,4 @@ $primary-color-darker-darker: #c04d3a;
 $grey: #858585;
 $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
+$breakpoint-medium: 1600px;
