--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -1,6 +1,7 @@
 #container-about {
   font-size: 0.8vw;
   color: #b0b0b0;
+  margin: 0 auto;
   #header-about {
     padding-top: 4%;
     background-image: url(../images/about/fs-bg.jpg);
