Set about picture to collapse into 100% width and hide the map element.

--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -113,6 +113,7 @@
 
       .about-pic {
         display: block;
+        width: 100%;
       }
       .map {
         position: absolute;
@@ -126,6 +127,9 @@
 
   @media screen and (max-width: $breakpoint-small) {
     .section-content {
+      .about {
+        width: 100%;
+      }
       .map {
         display: none;
       }
