--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -21,28 +21,22 @@
       width: 40%;
       vertical-align: bottom;
       padding: 0 2em;
+      padding-top: 181px;
 
+      > p {
+        padding-top: 15px;
+      }
       .head-title {
 	      font-size: 2.3em;
-	      text-align: center;
 	      span {
 	        font-weight: bold;
 	        color: $primary-color;
  	      }
       }
-
-      .head-subtitle {
-			  font-size: 1.6em;
-				&.top {
-	  		  color: $primary-color;
-	  		  font-weight: bold;
-	  		  margin-top: 2em;
-				}
-				&.bottom { margin-bottom: 2em; }
-      }
-
-      p { margin: 0; }
     }
+  }
+  .about-text {
+    position: relative;
   }
   .agents {
     padding: 5em 0;
@@ -53,7 +47,7 @@
     text-align: center;
     margin: 0.8em;
     box-shadow: 0px 0px 2em gainsboro;
-    width: 25%;
+    width: 15%;
     .bio-image {
       position: relative;
       img { width: 100%; }
@@ -146,6 +140,13 @@
       .description {
         width: 90%;
         font-size: 3em;
+        padding-top: 0;
+        .head-title {
+          text-align: center;
+        }
+        > p {
+         font-size: 1.2em;
+        }
       }
     }
 
