Format the header text and image so that they are both flush against the bottom of the header.'

--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -36,7 +36,20 @@
     }
   }
   .about-text {
-    position: relative;
+    width: 100%;
+    text-align: center;
+    .header-image {
+      width: 50%;
+      text-align: left;
+      display: inline-block;
+      vertical-align: bottom;
+    }
+    .description {
+      width: 50%;
+      text-align: left;
+      display: inline-block;
+      vertical-align: bottom;
+    }
   }
   .agents {
     padding: 5em 0;
